# Neobis_final_project

./: README.md  pyproject.toml
authorization/accounts/: endpoints.py  models.py  serializers.py  services.py  urls.py  utils.py
authorization/accounts/migrations/: 0001_initial.py
authorization/authorization/: settings.py  urls.py
